# OneAssure

./: .env  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  readme.md
OneAssure/: asgi.py  settings.py  urls.py  wsgi.py
insurance/: apps.py  cache.py  data_class.py  models.py  services.py  urls.py  views.py
insurance/migrations/: 0001_initial.py
insurance/templates/: index.html  result.html
